k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
  labels:
    app: goserver
spec:
  selector:
    matchLabels:
      app: goserver
  replicas: 3
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
      - name: goserver
        image: osor1o/hello-go:v2
        resources:
          requests:
            memory: 64M
            cpu: 100m
          limits:
            memory: 128M
            cpu: 250m
