k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: "goserver"
  labels:
    app: "goserver"
spec:
  containers:
  - name: goserver
    image: "osor1o/hello-go"
    resources:
      requests:
        cpu: 100m
        memory: 20Mi
      limits:
        memory: 25Mi
        cpu: 500m
