k8s/service-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    nodePort: 30001 # 30000 - 32767
    port: 80
    targetPort: 8000
    protocol: TCP
