k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ingress.fullcycle.com.br
    http:
      paths:
      - pathType: Prefix
        path: /admin
        backend:
          service:
            name: goserver-service
            port:
              number: 9000
